--- a/app/styles/App.css
+++ b/app/styles/App.css
@@ -1,59 +1,46 @@
+@import "root";
 @import "colors";
+@import "media";
 
-.text {
-  &_sunlit_sea {
-    color: $sunlit_sea;
+@media (--desktop) {
+  body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
   }
-  &_sea_foaming {
-    color: $sea_foaming;
-  }
-  &_sea_showing_green {
-    color: $sea_showing_green;
-  }
-  &_there_we_could_sail {
-    color: $there_we_could_sail;
-  };
-  &_drift_in_dreams {
-    color: $drift_in_dreams;
-  }
-}
-
-body {
-  background-color: $sea_showing_green;
-  margin: 0;
-  padding: 0;
-  color: $sunlit_sea;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 1em;
-  line-height: 6vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  box-sizing: border-box;
-  border: 5px dashed $there_we_could_sail;
-  border-radius: 20px;
-}
-
-h1 {
-  margin: 0;
-  margin-bottom: 0.2em;
-  font-size: 4em;
-  margin-right: -0.5em;
-}
-
-a {
-  color: $there_we_could_sail;
-  text-decoration: none;
-}
-
-.smile_emoticon {
-  transform: rotate(90deg);
-  display: inline-block;
-  padding:0;
 }
 
 .app {
-    flex-grow: 0;
-    text-align: center;
+  display: flex;
+  position: relative;
+  color: $there_we_could_sail;
+  font-family: 'Open Sans', sans-serif;
+  flex-direction: column;
+  padding: 2rem;
+}
+
+.content {
+  align-content: center;
+  text-align: center;
+  flex-grow: 1;
+  flex-shrink: 0;
+  flex-basis: auto;
+
+  &_block {
+    flex: 1;
+  }
+}
+
+@media (--medium) {
+  .app {
+    padding: 5rem;
+  }
+}
+
+@media (--desktop) {
+  .app {
+    width: 90rem;
+    margin: 0 auto;
+  }
 }
