--- a/app/styles/_colors.css
+++ b/app/styles/_colors.css
@@ -3,6 +3,7 @@
   http://www.colourlovers.com/palette/580974/Adrift_in_Dreams
 */
 
+$white: #FFFFFF;
 $sunlit_sea: #CFF09E;
 $sea_foaming: #A8DBA8;
 $sea_showing_green: #79BD9A;
