Styles adjustments, add aditional tests

--- a/app/styles/_grid.css
+++ b/app/styles/_grid.css
@@ -1,4 +1,5 @@
 @define-extend container {
+  display: flex;
   flex: 1 100%;
   align-items: stretch;
   box-sizing: border-box;
@@ -6,10 +7,7 @@
 
 @define-extend cell {
   display: flex;
-  flex: 1;
-  flex-grow: 1;
-  flex-shrink: 0;
-  flex-basis: auto;
+  flex: 1 0 auto;
   box-sizing: border-box;
 }
 
